--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
   "devDependencies": {
     "autod": "^3.0.1",
     "autod-egg": "^1.1.0",
+    "babel-eslint": "^10.1.0",
     "egg-bin": "^4.11.0",
     "egg-ci": "^1.11.0",
     "egg-mock": "^3.21.0",
-    "eslint": "^5.13.0",
-    "eslint-config-egg": "^7.1.0"
+    "eslint": "^7.0.0",
+    "prettier": "^2.2.1",
+    "eslint-config-egg": "^7.1.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.3.0"
   },
   "engines": {
     "node": ">=10.0.0"
