--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "egg": "^2.15.1",
     "egg-scripts": "^2.11.0",
+    "egg-swagger-doc": "^2.3.2",
     "egg-validate": "^2.0.2"
   },
   "devDependencies": {
