--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "egg": "^2.15.1",
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.11.0",
+    "egg-sequelize": "^6.0.0",
     "egg-swagger-doc": "^2.3.2",
-    "egg-validate": "^2.0.2"
+    "egg-validate": "^2.0.2",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "autod": "^3.0.1",
@@ -21,10 +24,11 @@
     "egg-ci": "^1.11.0",
     "egg-mock": "^3.21.0",
     "eslint": "^7.0.0",
-    "prettier": "^2.2.1",
     "eslint-config-egg": "^7.1.0",
     "eslint-config-prettier": "^7.0.0",
-    "eslint-plugin-prettier": "^3.3.0"
+    "eslint-plugin-prettier": "^3.3.0",
+    "prettier": "^2.2.1",
+    "sequelize-cli": "^6.2.0"
   },
   "engines": {
     "node": ">=10.0.0"
