删除 product 先判断是否存在 增加格式化vscode 支持

--- a/database/config.json
+++ b/database/config.json
@@ -8,14 +8,14 @@
   },
   "test": {
     "username": "root",
-    "password": "hjj19881208",
+    "password": "password",
     "database": "king_mall_unittest",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": "hjj19881208",
+    "password": "password",
     "database": "king_mall_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
