--- a/database/config.json
+++ b/database/config.json
@@ -1,23 +1,26 @@
 {
-  "development": {
-    "username": "root",
-    "password": "password",
-    "database": "king_mall",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
-  "test": {
-    "username": "root",
-    "password": "password",
-    "database": "king_mall_unittest",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
-  "production": {
-    "username": "root",
-    "password": "password",
-    "database": "king_mall_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  }
+    "development": {
+        "username": "root",
+        "password": "password",
+        "database": "king_mall",
+        "host": "127.0.0.1",
+        "dialect": "mysql",
+        "define": {
+            "timestamps": false
+        }
+    },
+    "test": {
+        "username": "root",
+        "password": "password",
+        "database": "king_mall_unittest",
+        "host": "127.0.0.1",
+        "dialect": "mysql"
+    },
+    "production": {
+        "username": "root",
+        "password": "password",
+        "database": "king_mall_production",
+        "host": "127.0.0.1",
+        "dialect": "mysql"
+    }
 }
