--- a/database/config.json
+++ b/database/config.json
@@ -4,10 +4,7 @@
         "password": "password",
         "database": "king_mall",
         "host": "127.0.0.1",
-        "dialect": "mysql",
-        "define": {
-            "timestamps": false
-        }
+        "dialect": "mysql"
     },
     "test": {
         "username": "root",
